add new section 'menu-images' with a div element having data-category 'bird

--- a/Day32/index.html
+++ b/Day32/index.html
@@ -15,5 +15,10 @@
             <li data-category="nature">Nature</li>
         </ul>
     </section>
+    <section class="menu-images">
+        <div class="images" data-category="bird">
+
+        </div>
+    </section>
 </body>
 </html>
