--- a/Day32/index.html
+++ b/Day32/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Filter</title>
+    <title>Image Filter Using Event Delegation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,8 +16,17 @@
         </ul>
     </section>
     <section class="menu-images">
+        <div class="images" data-category="all">
+            <img class="bird" src="https://images.pexels.com/photos/1661179/pexels-photo-1661179.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
+        </div>
         <div class="images" data-category="bird">
-
+            <img class="bird" src="https://www.pexels.com/photo/macro-photography-of-colorful-hummingbird-349758" alt="" /> 
+        </div>
+        <div class="images" data-category="animal">
+            <img class="bird" src="https://images.pexels.com/photos/47547/squirrel-animal-cute-rodents-47547.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
+        </div>
+        <div class="images" data-category="nature">
+            <img class="bird" src="https://images.pexels.com/photos/3225517/pexels-photo-3225517.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
         </div>
     </section>
 </body>
