update image sources and classes in index.html

--- a/Day32/index.html
+++ b/Day32/index.html
@@ -17,16 +17,16 @@
     </section>
     <section class="menu-images">
         <div class="images" data-category="all">
-            <img class="bird" src="https://images.pexels.com/photos/1661179/pexels-photo-1661179.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
+            <img class="all" src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
         </div>
         <div class="images" data-category="bird">
-            <img class="bird" src="https://www.pexels.com/photo/macro-photography-of-colorful-hummingbird-349758" alt="" /> 
+            <img class="bird" src="https://images.pexels.com/photos/1661179/pexels-photo-1661179.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
         </div>
         <div class="images" data-category="animal">
-            <img class="bird" src="https://images.pexels.com/photos/47547/squirrel-animal-cute-rodents-47547.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
+            <img class="animal" src="https://images.pexels.com/photos/47547/squirrel-animal-cute-rodents-47547.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
         </div>
         <div class="images" data-category="nature">
-            <img class="bird" src="https://images.pexels.com/photos/3225517/pexels-photo-3225517.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
+            <img class="nature" src="https://images.pexels.com/photos/3225517/pexels-photo-3225517.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
         </div>
     </section>
 </body>
