--- a/Day32/index.html
+++ b/Day32/index.html
@@ -29,5 +29,6 @@
             <img class="nature" src="https://images.pexels.com/photos/3225517/pexels-photo-3225517.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /> 
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
